add validation add cart, add update cart, add validate quantity product in cart, add validation create/update product in quantity and discount

--- a/AngularFrontEnd/projects/features/src/app/cart/cart.component.html
+++ b/AngularFrontEnd/projects/features/src/app/cart/cart.component.html
@@ -40,6 +40,7 @@
                           decrementButtonIcon="pi pi-minus"
                           [min]="1"
                           styleClass="input-styling"
+                          (ngModelChange)="updateCart($event, product.productId, product.quanity)"
                       ></p-inputNumber>
                   </td>
                   <td>{{ product.price | currency : "VND" }}</td>
