--- a/AngularFrontEnd/projects/features/src/app/home-page/home-page.component.scss
+++ b/AngularFrontEnd/projects/features/src/app/home-page/home-page.component.scss
@@ -160,3 +160,9 @@ div.discount {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+.detail-image{
+  max-height: 400px; 
+  max-width: 400px; 
+  height: auto; 
+  width: auto;
+}
