--- a/AngularFrontEnd/projects/features/src/app/admin-order/admin-order.component.html
+++ b/AngularFrontEnd/projects/features/src/app/admin-order/admin-order.component.html
@@ -37,7 +37,7 @@
 
       <p-tabPanel header="cancel">
         <ng-template pTemplate="header">
-          <span>Cancel</span>
+          <span>Huỷ</span>
         </ng-template>
         <app-admin-list-order
           *ngIf="currentOrder == enumData.statusOrder.cancel.value"
