--- a/AngularFrontEnd/projects/features/src/app/home-page/footer/footer.component.html
+++ b/AngularFrontEnd/projects/features/src/app/home-page/footer/footer.component.html
@@ -1,14 +1,13 @@
 <footer class="footer">
   <div class="container">
     <ul class="menu">
-      <li class="menu__item"><a class="menu__link" href="#">Home</a></li>
-      <li class="menu__item"><a class="menu__link" href="#">About</a></li>
-      <li class="menu__item"><a class="menu__link" href="#">Services</a></li>
-      <li class="menu__item"><a class="menu__link" href="#">Team</a></li>
-      <li class="menu__item"><a class="menu__link" href="#">Contact</a></li>
+      <li class="menu__item"><a class="menu__link" href="#">Trang chủ</a></li>
+      <li class="menu__item"><a class="menu__link" href="#">Thông tin</a></li>
+      <li class="menu__item"><a class="menu__link" href="#">Dịch vụ</a></li>
+      <li class="menu__item"><a class="menu__link" href="#">Liên lạc</a></li>
     </ul>
     <div>
-      <span class="copy-right">&copy;2023 TUONG STATIONERY STORE | All Rights Reserved</span>
+      <span class="copy-right">VĂN PHÒNG PHẨM 2023 &copy; | All Rights Reserved</span>
     </div>
   </div>
 </footer>
