--- a/AngularFrontEnd/projects/features/src/app/order/listOrder/listOrder.component.html
+++ b/AngularFrontEnd/projects/features/src/app/order/listOrder/listOrder.component.html
@@ -21,7 +21,7 @@
       <td style="text-align: center">
         <p-button
           *ngIf="this.statusOrderCode === this.enumData.statusOrder.wait.code"
-          label="Cancel"
+          label="Huỷ"
           styleClass="p-button-danger"
           icon="pi pi-times"
           (click)="confirmCancelOrder(order.id)"
