--- a/AngularFrontEnd/projects/features/src/app/order/listOrder/order-detail/order-detail.component.html
+++ b/AngularFrontEnd/projects/features/src/app/order/listOrder/order-detail/order-detail.component.html
@@ -16,7 +16,7 @@
     <p-table [value]="lstProduct" [tableStyle]="{ 'min-width': '60rem' }">
       <ng-template pTemplate="header">
         <tr>
-          <th>Image</th>
+          <th>Hình ảnh</th>
           <th>Name</th>
           <th>Price</th>
           <th>Quantity</th>
