--- a/AngularFrontEnd/projects/features/src/app/admin-user/admin-user.component.html
+++ b/AngularFrontEnd/projects/features/src/app/admin-user/admin-user.component.html
@@ -1,8 +1,8 @@
 <p-accordion>
-    <p-accordionTab header="User Manages" class="center" [selected]="true">
+    <p-accordionTab header="Quản lý tài khoản" class="center" [selected]="true">
         <div class="search-box">
-            <input pTooltip="Global Seach" tooltipPosition="bottom" type="text" pInputText placeholder="Search" 
-            matInput (input)="tdt.filterGlobal($any($event.target).value, 'contains')"/>
+            <input pTooltip="Global Seach" tooltipPosition="bottom" type="text" pInputText placeholder="Tìm kiếm" 
+                matInput (input)="tdt.filterGlobal($any($event.target).value, 'contains')"/>
         </div>          
         <div class="displayUsers">
             <p-table #tdt [value]="dataUsers" [columns]="usersDataCols" class="table-content"[rows]="rows"
@@ -10,7 +10,7 @@
                 [resizableColumns]="true" [reorderableColumns]="true" 
                 [globalFilterFields]="['name','loginName','email','telNum', 'address']"
                 [rowsPerPageOptions]="[5, 10, 20]"
-                currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries">
+                currentPageReportTemplate="Hiển thị {first} - {last} trong tổng số {totalRecords} dữ liệu">
                 <ng-template pTemplate="header" let-columns>
                     <tr>
                         <th pReorderableColumn pResizableColumn *ngFor="let col of columns" [style.width]="col.width + '%'">
@@ -25,9 +25,9 @@
                             <span *ngSwitchCase="'number'">{{ rowIndex + 1 }}</span>
                             <span *ngSwitchCase="'button'" class="button"> 
                                 <td>
-                                    <button pButton icon="pi pi-pencil" pTooltip="Edit User" tooltipPosition="bottom" class="p-button-rounded p-button-success mr-2" (click)="editUser(rowData)"></button>
-                                    <button *ngIf="rowData.isActive" pButton icon="pi pi-lock" pTooltip="InActive User" tooltipPosition="bottom" class="p-button-rounded p-button-danger mr-2" (click)="activeOrInActiveUser(rowData)"></button>
-                                    <button *ngIf="!rowData.isActive" pButton icon="pi pi-lock-open" pTooltip="Active User" tooltipPosition="bottom" class="p-button-rounded p-button-secondary mr-2" (click)="activeOrInActiveUser(rowData)"></button>
+                                    <button pButton icon="pi pi-pencil" pTooltip="Chỉnh sửa" tooltipPosition="bottom" class="p-button-rounded p-button-success mr-2" (click)="editUser(rowData)"></button>
+                                    <button *ngIf="rowData.isActive" pButton icon="pi pi-lock" pTooltip="Khoá" tooltipPosition="bottom" class="p-button-rounded p-button-danger mr-2" (click)="activeOrInActiveUser(rowData)"></button>
+                                    <button *ngIf="!rowData.isActive" pButton icon="pi pi-lock-open" pTooltip="Mở khoá" tooltipPosition="bottom" class="p-button-rounded p-button-secondary mr-2" (click)="activeOrInActiveUser(rowData)"></button>
                                     <button pButton icon="pi pi-user-plus" tooltipPosition="bottom" [ngClass]="handleButtonSetManager(rowData) ? 'p-button-rounded p-button-info mr-2' : 'p-button-rounded p-button-secondary mr-2'"  
                                     (click)="setManagerPermisson(rowData)" [pTooltip]="handleTooltipSetManager(rowData)"></button>
                                 </td> 
@@ -68,8 +68,8 @@
                 </mat-form-field>     
             </ng-template>
             <ng-template pTemplate="footer">
-                <button pButton pRipple label="Cancel" icon="pi pi-times" class="p-button-secondary" type="button" (click)="hideEditUserPopup()"></button>
-                <button pButton pRipple label="Save" icon="pi pi-check" class="p-button-success" (click)="confirmEditUser()"></button>
+                <button pButton pRipple label="Huỷ" icon="pi pi-times" class="p-button-secondary" type="button" (click)="hideEditUserPopup()"></button>
+                <button pButton pRipple label="Lưu" icon="pi pi-check" class="p-button-success" (click)="confirmEditUser()"></button>
             </ng-template>
     </p-dialog>
 </form>
