--- a/AngularFrontEnd/projects/features/src/app/create-product/create-product.component.html
+++ b/AngularFrontEnd/projects/features/src/app/create-product/create-product.component.html
@@ -5,7 +5,7 @@
             <div class="grid p-fluid">
                 <div class="col-12 md:col-4">
                     <mat-form-field appearance="outline">
-                        <mat-label>Product ID</mat-label>
+                        <mat-label>Product STT</mat-label>
                         <input matInput formControlName = "Id" name = "ProductId" required="">             
                       </mat-form-field> 
                 </div>              
@@ -44,7 +44,7 @@
                 </div>                       
                 <div class="col-12 md:col-4">
                     <mat-form-field appearance="outline">
-                        <mat-label>Description</mat-label>
+                        <mat-label>Mô tả</mat-label>
                         <input matInput formControlName = "Description" name = "Description">             
                     </mat-form-field> 
                 </div>
@@ -86,8 +86,8 @@
             <img [src]="createImgPath(this.productForm.controls['Image'].value)" alt="product picture" class="courseImage"> 
             <div class="pt-2">
                 <button *ngIf="!existedProductId" pButton label="Create" class="p-button-rounded p-button-success" type="submit" [disabled]="productForm.invalid"></button>
-                <button *ngIf="existedProductId" pButton label="Save" class="p-button-rounded p-button-success" type="submit" [disabled]="productForm.invalid"></button>           
-                <button pButton label="Cancel" class="p-button-rounded p-button-secondary ml-3" type="button" (click)="cancel()"></button> 
+                <button *ngIf="existedProductId" pButton label="Lưu" class="p-button-rounded p-button-success" type="submit" [disabled]="productForm.invalid"></button>           
+                <button pButton label="Huỷ" class="p-button-rounded p-button-secondary ml-3" type="button" (click)="cancel()"></button> 
             </div>                             
          </p-accordionTab>
     </p-accordion>
