--- a/AngularFrontEnd/projects/features/src/app/login/login.component.html
+++ b/AngularFrontEnd/projects/features/src/app/login/login.component.html
@@ -1,62 +1,72 @@
 <p-toast position="top-center" key="tc"></p-toast>
 <p-toast position="bottom-center" key="bc"></p-toast>
 <form [formGroup]="loginForm" (submit)="login()">
-<p-dialog header="Login Account" [(visible)]="displayLoginPopUp" [style]="{width: '25vw'}" [baseZIndex]="10000" [resizable]="true">
+<p-dialog header="Đăng nhập" [(visible)]="displayLoginPopUp" [style]="{width: '25vw'}" [baseZIndex]="10000" [resizable]="true" (onHide)="hideLogin()">
   <div class="example-container">
     <div>
       <mat-form-field appearance="outline">
-        <mat-label>Login name</mat-label>
+        <mat-label>Tài khoản</mat-label>
         <input matInput formControlName = "LoginUser" name = "LoginUser" required="">
         <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+        <mat-error *ngIf="loginForm.get('LoginUser')?.hasError('required')">
+          Hãy nhập Tài khoản!
+        </mat-error> 
       </mat-form-field>
     </div>
     <div>
       <mat-form-field appearance="outline">
-        <mat-label>Password</mat-label>
+        <mat-label>Mật khẩu</mat-label>
         <input matInput formControlName = "Password" name = "Password" required="" [type]="hide ? 'password' : 'text'">
         <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
           <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
         </button>
+        <mat-error *ngIf="loginForm.get('Password')?.hasError('required')">
+          Hãy nhập mật khẩu!
+        </mat-error>
       </mat-form-field>     
     </div> 
     </div>
-    <p-button class="center loginButton" label="Login" type="submit"></p-button> 
-    <a class="center" routerLink="../register-user">You don't have an account?</a>
-    <a class="center forgotPassword" (click)="openForgotPopup()">Forgot password?</a>
+    <p-button class="center loginButton" label="Đăng nhập" type="submit"></p-button> 
+    <span class="center">
+      <a class="hyper-link" routerLink="../register-user">Bạn chưa có tài khoản?</a>
+    </span>    
+    <span class="center forgotPassword">
+      <a class="hyper-link" (click)="openForgotPopup()">Quên mật khẩu?</a>
+    </span>       
 </p-dialog>
 </form>
-<p-dialog header="Forgot Password" [(visible)]="displayForgotPopup" [style]="{width: '25vw'}" [baseZIndex]="10000" (onHide)="openLoginPopUp()">
+<p-dialog header="Quên mật khẩu" [(visible)]="displayForgotPopup" [style]="{width: '25vw'}" [baseZIndex]="10000" (onHide)="openLoginPopUp()">
   <div class="example-container">
     <div>
       <mat-form-field appearance="outline">
-        <mat-label>Enter email</mat-label>
+        <mat-label>Địa chỉ email</mat-label>
         <input matInput [(ngModel)]="confirmEmail" [disabled]="IsReceiveConfirmCode">
         <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
       </mat-form-field>
     </div>
     <div>
       <mat-form-field appearance="outline">
-        <mat-label>Enter code</mat-label>
+        <mat-label>Mã xác nhận</mat-label>
         <input matInput [(ngModel)]="confirmCode" [disabled]="!IsReceiveConfirmCode">
       </mat-form-field>     
     </div> 
     </div>
-    <p-button *ngIf="!IsReceiveConfirmCode" class="center loginButton" label="Send code" (click)="sendForgetCode()"></p-button> 
-    <p-button *ngIf="IsReceiveConfirmCode" class="center loginButton" label="Confirm" (click)="confirmForgetPassword()"></p-button>
+    <p-button *ngIf="!IsReceiveConfirmCode" class="center loginButton" label="Gửi mã xác nhận" (click)="sendForgetCode()"></p-button> 
+    <p-button *ngIf="IsReceiveConfirmCode" class="center loginButton" label="Xác nhận" (click)="confirmForgetPassword()"></p-button>
 </p-dialog>
 
-<p-dialog header="Forgot Password" [(visible)]="displayChangePasswordPopup" [style]="{width: '25vw'}" [baseZIndex]="10000" (onHide)="openLoginPopUp()">
+<p-dialog header="Quên mật khẩu" [(visible)]="displayChangePasswordPopup" [style]="{width: '25vw'}" [baseZIndex]="10000" (onHide)="openLoginPopUp()">
   <div class="example-container">
     <div>
       <mat-form-field appearance="outline">
-        <mat-label>Enter email</mat-label>
+        <mat-label>Địa chỉ email</mat-label>
         <input matInput [(ngModel)]="confirmEmail">
         <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
       </mat-form-field>
     </div>
     <div>
       <mat-form-field appearance="outline">
-        <mat-label>Enter password</mat-label>
+        <mat-label>Mật khẩu mới</mat-label>
         <input matInput [(ngModel)]="newPassword" [type]="hide ? 'password' : 'text'">
         <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
           <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
@@ -65,7 +75,7 @@
     </div> 
     <div>
       <mat-form-field appearance="outline">
-        <mat-label>Enter password</mat-label>
+        <mat-label>Xác nhận mật khẩu mới</mat-label>
         <input matInput [(ngModel)]="newConfirmPassword" [type]="hide ? 'password' : 'text'">
         <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
           <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
@@ -73,7 +83,7 @@
       </mat-form-field>     
     </div> 
     </div>
-    <p-button class="center loginButton" label="Change password" (click)="changePassword()"></p-button> 
+    <p-button class="center loginButton" label="Đổi mật khẩu" (click)="changePassword()"></p-button> 
 </p-dialog>
 
 <p-toast position="bottom-center" key="c" (onClose)="onRejectLoginPage()" [style]="{width: '20vw'}" [baseZIndex]="5000">
@@ -86,10 +96,10 @@
           </div>
           <div class="row confirmDialog">
             <div class="col">
-              <button type="button" pButton (click)="onConfirmLoginPage()" label="Yes" class="p-button-success ml-3 mt-3"></button>
+              <button type="button" pButton (click)="onConfirmLoginPage()" label="Đồng ý" class="p-button-success ml-3 mt-3"></button>
             </div>
             <div class="col">
-              <button type="button" pButton (click)="onRejectLoginPage()" label="No" class="p-button-secondary mt-3" style="float: right;"></button>
+              <button type="button" pButton (click)="onRejectLoginPage()" label="Từ chối" class="p-button-secondary mt-3" style="float: right;"></button>
             </div>
           </div>         
       </div>
@@ -106,10 +116,10 @@
           </div>
           <div class="row confirmDialog">
             <div class="col">
-              <button type="button" pButton (click)="onConfirmCoursePage()" label="Yes" class="p-button-success ml-3 mt-3"></button>
+              <button type="button" pButton (click)="onConfirmCoursePage()" label="Đồng ý" class="p-button-success ml-3 mt-3"></button>
             </div>
             <div class="col">
-              <button type="button" pButton (click)="onRejectLoginCoursePage()" label="No" class="p-button-secondary mt-3" style="float: right;"></button>
+              <button type="button" pButton (click)="onRejectLoginCoursePage()" label="Từ chối" class="p-button-secondary mt-3" style="float: right;"></button>
             </div>
           </div>         
       </div>
