--- a/AngularFrontEnd/projects/features/src/app/register/register.component.scss
+++ b/AngularFrontEnd/projects/features/src/app/register/register.component.scss
@@ -52,8 +52,6 @@ p {
 .center{
   justify-content: center;
   display: flex;
-  text-decoration: none;
-  color:green;
 }
 .registerButton{
   margin-bottom: 0.75rem;
@@ -67,4 +65,8 @@ p {
       width: 23vw!important;
     }
   }
+}
+.hyper-link{
+  text-decoration: none;
+  color:green;
 }
